도서검색 수정 / 이시욱 / 2-10 13:52 " [상세내용] book-mapper.xml - 쿼리문 변경 book.html - 오타 수정 bookController.java - 불필요한 내용 삭제 및 수정

--- a/src/main/resources/templates/book.html
+++ b/src/main/resources/templates/book.html
@@ -86,10 +86,10 @@
             <div style="width: 900px;">
               <div class="input-group">
               <div class="form-inline">
-                  <select class="form-select" name="searchType" id="searchType" onchange="cityChange()" style="border-radius: 5px; width: 200px; display: inline;">
-                    <option value=" " th:selected="${#strings.equals(param.searchType, ' ')}">전체</option>
-                    <option value="bookname" th:selected="${#strings.equals(param.searchType, 'bookname')}">제목</option>
-                    <option value="authors" th:selected="${#strings.equals(param.searchType, 'authors')}">저자</option>
+                  <select class="form-select" name="searchType" id="searchType" style="border-radius: 5px; width: 200px; display: inline;">
+                   <!--  <option value=" " th:selected="${#strings.equals(param.searchType, ' ')}">전체</option> -->
+                    <option value="bookname">제목</option>
+                    <option value="authors">저자</option>
                   </select>
               </div>
                <!--  <div class="dropdown" data-bs-toggle="select">
