--- a/src/main/resources/templates/nursery-detail.html
+++ b/src/main/resources/templates/nursery-detail.html
@@ -155,7 +155,7 @@
               <h1 style="margin-top: 25px; color:black"><img class="me-1" src="/img/ukids/nursery/gcicon.JPG" style="width: 50px; height: 40px;"> [[${nursery.crname}]] <span id="establish">[[${nursery.crtypename}]]</span></h1>
               <hr style="margin-top: 10px; margin-left: 25px; width: 95%;">
               <div class="col rounded-3 mb-5 mt-3 mx-3" style="height: 400px; width: 500px;" id="kinderImg">
-                <img class="rounded-3" th:src="|img/ukids/어린이집/nursery${i}.JPG|" width="100%" height="100%">
+                <img class="rounded-3" th:src="|img/어린이집/nursery${i}.JPG|" width="100%" height="100%">
               </div>
               <div class="col mt-3 rounded-3">
                 <div class="rounded-3" id="map" style="width:100%;height:410px; z-index:0;"></div>
