--- a/src/main/resources/templates/nursery-main.html
+++ b/src/main/resources/templates/nursery-main.html
@@ -100,13 +100,13 @@
 	                    <th:block th:if="${param.build == null}">
 	                      <li class="widget-filter-item d-flex justify-content-between align-items-center mb-1">
 	                        <div class="form-check">
-	                          <input class="form-check-input" name="build" type="checkbox" id="build1" value="공립">
+	                          <input class="form-check-input" name="build" type="checkbox" id="build1" value="public">
 	                          <label class="form-check-label widget-filter-item-text" for="build1">국공립</label>
 	                        </div>
 	                      </li>
 	                      <li class="widget-filter-item d-flex justify-content-between align-items-center mb-1">
 	                        <div class="form-check">
-	                          <input class="form-check-input" name="build" type="checkbox" id="build2" value="민간">
+	                          <input class="form-check-input" name="build" type="checkbox" id="build2" value="private">
 	                          <label class="form-check-label widget-filter-item-text" for="build2">사립</label>
 	                        </div>
 	                      </li>
